# tms570-flash-algorithm

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  init.gdb  link.x  make.fish  rtt.gdb  template.yaml
.cargo/: config.toml
src/: main.rs
src/f021/: mod.rs  sys.rs
