[package]
authors = ["Sean Cross <sean@xobs.io>"]
edition = "2021"
readme = "README.md"
name = "tms570-flash-algorithm"
version = "0.1.0"

[dependencies]
cortex-ar = {version = "0.1.0", features = ["critical-section-single-core"]}
flash-algorithm = { version = "0.4.0" }
rtt-target = { version = "0.5" }

# this lets you use `cargo fix`!
[[bin]]
name = "tms570-flash-algorithm"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
#lto = "fat"
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
